--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@anthropic-ai/sdk": "^0.56.0",
     "docx": "^9.5.1",
     "dotenv": "^17.2.1",
+    "playwright": "^1.55.0",
     "qrcode-terminal": "^0.12.0",
     "whatsapp-web.js": "^1.31.0"
   }
